# haskell-neo4j-rest-client

./: .gitignore  .travis.yml  LICENSE  README.md  hackage-upload-docs.sh  haskell-neo4j-client.cabal  haskell-neo4j-rest-client.cabal  stack.yaml
Database/: Neo4j.hs
src/Database/: Neo4j.hs
src/Database/Neo4j/: Batch.hs  Cypher.hs  Graph.hs  Http.hs  Index.hs  Label.hs  Node.hs  Property.hs  Relationship.hs  Traversal.hs  Types.hs  Version.hs
src/Database/Neo4j/Batch/: Label.hs  Node.hs  Property.hs  Relationship.hs  Types.hs
src/Database/Neo4j/Transactional/: Cypher.hs
tests/: IntegrationTests.hs  TestMain.hs
