name:                haskell-neo4j-client
version:             0.3.2.4
synopsis:            A Haskell neo4j client
description:         
    Library to interact with Neo4j databases. 
    .
    This library covers: 
    .
       -Cypher transactions
    .
       -CRUD operations for nodes, relationships, labels and indexes
    .
       -Batch calls for CRUD operations.
    .
       -Traversal API
    .
       -Authentication
    .
       -SSL
    .
    All code has been tested with Neo4j versions 2.0.3, 2.1.5, 2.1.7, 2.2.0 and 2.2.1
homepage:            https://github.com/asilvestre/haskell-neo4j-rest-client
license:             MIT
license-file:        LICENSE
author:              Antoni Silvestre
maintainer:          antoni.silvestre@gmail.com
copyright:           (c) 2014 Antoni Silvestre
category:            Database
build-type:          Simple
cabal-version:       >=1.8

source-repository this
    type: git
    location: https://github.com/asilvestre/haskell-neo4j-rest-client.git
    tag: master

Test-Suite test-haskell-neo4j-rest-client
     Type:           exitcode-stdio-1.0
     Hs-Source-Dirs: src, tests
     Main-is:        IntegrationTests.hs
     Build-Depends:  base                        == 4.*
                   , bytestring                  >= 0.10
                   , test-framework              >= 0.8
                   , test-framework-quickcheck2  >= 0.3
                   , QuickCheck                  >= 2.7
                   , test-framework-hunit        >= 0.3
                   , test-framework-th           >= 0.2
                   , HUnit                       >= 1.2
                   , Cabal
                   , text                        >= 1.1
                   , http-client                 >= 0.4
                   , http-client-tls             >= 0.2
                   , http-conduit                >= 2.1
                   , http-types                  >= 0.8
                   , resourcet                   >= 1.1
                   , data-default                >= 0.5
                   , transformers                >= 0.3
                   , transformers-compat         >  0.3
                   , aeson                       >= 0.7
                   , vector                      >= 0.10
                   , scientific                  >= 0.3
                   , unordered-containers        >= 0.2
                   , transformers-base           >= 0.4
                   , HTTP                        >= 4000.2
                   , lifted-base                 >= 0.2
                   , hashable                    >= 1.2
                   , mtl                         >= 2.1
                   , network-uri                 >= 2.6

library
  hs-source-dirs:      src
  exposed-modules:     Database.Neo4j, Database.Neo4j.Graph, Database.Neo4j.Batch, Database.Neo4j.Cypher,
                       Database.Neo4j.Transactional.Cypher, Database.Neo4j.Types, Database.Neo4j.Traversal
  other-modules:       Database.Neo4j.Http, Database.Neo4j.Node, Database.Neo4j.Relationship,
                       Database.Neo4j.Property, Database.Neo4j.Label, Database.Neo4j.Index, 
                       Database.Neo4j.Version,
                       Database.Neo4j.Batch.Node, Database.Neo4j.Batch.Relationship, 
                       Database.Neo4j.Batch.Property, Database.Neo4j.Batch.Label, 
                       Database.Neo4j.Batch.Types
  build-depends:       base                  == 4.*
                     , containers            >= 0.5
                     , text                  >= 1.1
                     , http-client           >= 0.4
                     , http-client-tls       >= 0.2
                     , http-conduit          >= 2.1
                     , http-types            >= 0.8
                     , bytestring            >= 0.10
                     , resourcet             >= 1.1
                     , data-default          >= 0.5
                     , transformers          >= 0.3
                     , transformers-compat   >  0.3
                     , aeson                 >= 0.7
                     , vector                >= 0.10.0
                     , scientific            >= 0.3.0
                     , unordered-containers  >= 0.2.0
                     , HTTP                  >= 4000.2
                     , lifted-base           >= 0.2
                     , hashable              >= 1.2
                     , transformers-base     >= 0.4
                     , mtl                   >= 2.1
                     , network-uri           >= 2.6
